--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMjQinsMS8JSS2Ea/Lcb9zt"
+      "authorship_tag": "ABX9TyNhR5AqXXsUVAi1dZNm9ZOE"
     },
     "kernelspec": {
       "name": "python3",
@@ -421,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -499,7 +499,7 @@
         },
         "outputId": "018a4e03-0c60-435a-c703-64e7e1abc65a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -597,7 +597,7 @@
         "id": "2pLqYKfsTaNn",
         "outputId": "75b6d77b-4fa2-4704-c8f1-2c7809298b22"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -753,7 +753,7 @@
         "id": "hgYmAMVhTjqa",
         "outputId": "a78fc902-216d-45ef-f840-a539e45b4cf0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -792,7 +792,7 @@
         "id": "bpm3VK_4lmaT",
         "outputId": "64e357d4-71ef-4fb9-e5e6-f2e4f3eae8e9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -829,7 +829,7 @@
         "id": "jlsVVwKM0fId",
         "outputId": "4d866be4-2dc2-4794-84ce-8ea2031a72b7"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -855,7 +855,7 @@
         "id": "6rr0fFvm0fnx",
         "outputId": "86310c7f-d663-431d-bb29-ceded1a9055c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -881,7 +881,7 @@
         "id": "WDyb2PtmZQ3d",
         "outputId": "7ff93384-264c-4f1c-c1f6-916b7f5451c6"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -921,7 +921,7 @@
       "metadata": {
         "id": "eyBvLfz_5lGp"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -940,7 +940,7 @@
         "id": "IAj01toF5L5_",
         "outputId": "936bfdf9-d817-4549-da33-e39e991037cb"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -987,7 +987,7 @@
         "id": "kpGHmhYO6osD",
         "outputId": "b7583df6-d1e6-47cc-c67d-a0871dce60e1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1037,7 +1037,7 @@
         "id": "ijFChqeSamEn",
         "outputId": "fa4a8618-ebc5-4994-cb0d-4661d1108511"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1091,7 +1091,7 @@
       "metadata": {
         "id": "nhOAOicSr94L"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1114,12 +1114,12 @@
       "metadata": {
         "id": "4J9JbUswr9pS"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1142,7 +1142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1167,7 +1167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1194,7 +1194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1259,7 +1259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1296,7 +1296,7 @@
       "metadata": {
         "id": "qh-ZafQP96EJ"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1317,7 +1317,7 @@
       "metadata": {
         "id": "s_KSpiGd-9uG"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1333,7 +1333,7 @@
         "id": "oipg-6_lP_un",
         "outputId": "402e8e0f-c346-4a2c-cae3-d5b304871687"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1377,7 +1377,7 @@
         "id": "5CiNpSCTPvSk",
         "outputId": "2aa8d57f-dc15-43dd-c913-a6c6ab22bcf7"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1424,7 +1424,7 @@
       "metadata": {
         "id": "iVGy4c4QQlFb"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1445,7 +1445,7 @@
         "id": "Xw8WrXq9WpOh",
         "outputId": "ba90355d-2ec0-483b-c82b-0c5fc9e33ffb"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1468,7 +1468,7 @@
         },
         "outputId": "2fbb9aef-5aa6-4def-8471-d51b90e792cd"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1488,7 +1488,7 @@
       "metadata": {
         "id": "vnWUdqVliJq2"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1501,7 +1501,7 @@
       "metadata": {
         "id": "48CmCTDKXkoY"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1530,7 +1530,7 @@
       "metadata": {
         "id": "nXNPKPbXjCnb"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1552,7 +1552,7 @@
       "metadata": {
         "id": "WTQWWgsB9sEG"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1582,7 +1582,7 @@
       "metadata": {
         "id": "7mE0rizv-SEJ"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1664,7 +1664,7 @@
         },
         "outputId": "d753c8cb-9610-40b2-ae80-a441c4d8b146"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1735,7 +1735,7 @@
       "metadata": {
         "id": "VmpmoA1LKx3q"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1753,7 +1753,7 @@
         },
         "outputId": "a681ed85-335f-4a2d-d68b-20da736f5c8b"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1822,7 +1822,7 @@
       "metadata": {
         "id": "Zy_f-RHGXn_p"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1846,7 +1846,7 @@
         "id": "W_blxD-TFd6C",
         "outputId": "f4b5ba55-5259-4f4b-9583-a30eab8fcf94"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1903,7 +1903,7 @@
       "metadata": {
         "id": "2fmv4r6ReZcS"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1938,7 +1938,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1979,7 +1979,7 @@
       "metadata": {
         "id": "CLdO2ygPhN_N"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2051,7 +2051,7 @@
       "metadata": {
         "id": "Phn0FtoV3b1k"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2090,7 +2090,7 @@
       "metadata": {
         "id": "loGu908zj0wW"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2112,7 +2112,7 @@
       "metadata": {
         "id": "qGDsb--Roufo"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2170,7 +2170,7 @@
         },
         "outputId": "464ff072-92bd-4322-b611-59eed197983d"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2239,7 +2239,7 @@
         "id": "DMkvL3IgDCMD",
         "outputId": "8c98c134-09f3-44fc-c164-1ec4363be02b"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2267,7 +2267,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2321,11 +2321,11 @@
         "\n",
         "        # block1 contains: two convolution layers and one max pooling layer\n",
         "        self.block1 = nn.Sequential(\n",
-        "            nn.Conv2d(in_channels = input_shape,\n",
-        "                      out_channels = hidden_units,\n",
-        "                      kernel_size = 3,\n",
-        "                      stride = 1,\n",
-        "                      padding = 1),\n",
+        "            nn.Conv2d(in_channels = input_shape, # Number of channels in the input image\n",
+        "                      out_channels = hidden_units, # Number of channels produced by the convolution\n",
+        "                      kernel_size = 3, # Convolution filter size\n",
+        "                      stride = 1, # Step size that the convolution kernel takes at a time\n",
+        "                      padding = 1), # Add padding to all four sides of the input\n",
         "            nn.ReLU(),\n",
         "            nn.Conv2d(in_channels = hidden_units,\n",
         "                      out_channels = hidden_units,\n",
@@ -2360,7 +2360,7 @@
       "metadata": {
         "id": "WIHvPeJqMo5z"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2379,7 +2379,7 @@
         "id": "jqwCqB92MJQR",
         "outputId": "5264d441-a71d-4163-a839-dde1e8ab1a59"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
