--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO4HAOa4QSWqG+ZRjqUfebO"
+      "authorship_tag": "ABX9TyMBRexfz5ruODTYl2Zg+k+0"
     },
     "kernelspec": {
       "name": "python3",
@@ -2482,13 +2482,47 @@
     {
       "cell_type": "code",
       "source": [
-        "#"
+        "# Create a convolution layer with the same dimensions as TinyVGG\n",
+        "\n",
+        "torch.manual_seed(42)\n",
+        "\n",
+        "conv_layer = nn.Conv2d(in_channels = 3,\n",
+        "                       out_channels = 10,\n",
+        "                       kernel_size = 3,\n",
+        "                       stride = 1,\n",
+        "                       padding = 0)"
       ],
       "metadata": {
         "id": "CLKmJ9e5O_VJ"
       },
-      "execution_count": null,
+      "execution_count": 76,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conv_layer(test_img).shape"
+      ],
+      "metadata": {
+        "id": "Fc7XnL7OPdvT",
+        "outputId": "4d23a27e-2e1d-4dc5-933c-c674c54aee86",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([10, 62, 62])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
+      ]
     },
     {
       "cell_type": "markdown",
