--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPdzlGdy5UuHXZ/sa+c9RtC"
+      "authorship_tag": "ABX9TyOCd4ihnnAQ0Dv1OQPTCzYX"
     },
     "kernelspec": {
       "name": "python3",
@@ -2883,10 +2883,10 @@
       ],
       "metadata": {
         "id": "8681G5iEtr6p",
-        "outputId": "2518298a-5ced-40e3-a29a-2b7a82301818",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2518298a-5ced-40e3-a29a-2b7a82301818"
       },
       "execution_count": 66,
       "outputs": [
@@ -2950,11 +2950,11 @@
         "print(f'AvgPooled tensor shape: {avgpooled_tensor.shape}')"
       ],
       "metadata": {
-        "id": "b5VAnaIWIwda",
-        "outputId": "1a4ed451-2e69-4592-eb71-0c998b047421",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "b5VAnaIWIwda",
+        "outputId": "1a4ed451-2e69-4592-eb71-0c998b047421"
       },
       "execution_count": 74,
       "outputs": [
@@ -2973,8 +2973,33 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Setting Up Loss function and Optimizer"
+      ],
+      "metadata": {
+        "id": "M6ELrb9ZWwo6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- For model_2"
+      ],
+      "metadata": {
+        "id": "4W-3ENuyW-5v"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "loss_fn = nn.CrossEntropyLoss()\n",
+        "\n",
+        "optimizer = torch.optim.SGD(\n",
+        "    model_2.parameters(),\n",
+        "    lr = 0.1\n",
+        ")"
+      ],
       "metadata": {
         "id": "Ld8gtb1wLcYK"
       },
