--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOCd4ihnnAQ0Dv1OQPTCzYX"
+      "authorship_tag": "ABX9TyMcxX43kFWKl0vyFTt/XRsw"
     },
     "kernelspec": {
       "name": "python3",
@@ -3002,6 +3002,50 @@
       ],
       "metadata": {
         "id": "Ld8gtb1wLcYK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Training and Testing model_2"
+      ],
+      "metadata": {
+        "id": "F_7aaxiZYgKQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Using our previously created functions\n",
+        "- Measure time to compare with other models"
+      ],
+      "metadata": {
+        "id": "7luOjMyBYtlW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from timeit import default_timer as timer"
+      ],
+      "metadata": {
+        "id": "KKCNtuhbYsyP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(42)\n",
+        "\n",
+        "train_start_time_model2 = timer()\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "nMUF3y5bZade"
       },
       "execution_count": null,
       "outputs": []
