--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyObDHBk/qO/V0sWoXGr9ivJ"
+      "authorship_tag": "ABX9TyMfSoOaBRSgvWs9AABHkuJF"
     },
     "kernelspec": {
       "name": "python3",
@@ -3854,12 +3854,12 @@
         "plt.ylabel(\"model\");"
       ],
       "metadata": {
-        "id": "zyHW4wZ9BglK",
-        "outputId": "051e3cec-d08e-4e67-8c14-fce79d1c57b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 405
-        }
+        },
+        "id": "zyHW4wZ9BglK",
+        "outputId": "051e3cec-d08e-4e67-8c14-fce79d1c57b5"
       },
       "execution_count": 142,
       "outputs": [
@@ -3904,10 +3904,115 @@
         "    pred_probs = []\n",
         "\n",
         "    model.eval()\n",
-        "    with torch.inference_mode():"
+        "    with torch.inference_mode():\n",
+        "        for sample in data:\n",
+        "            # sample preparation\n",
+        "            sample = torch.unsqueeze(sample, dim=0).to(device)\n",
+        "\n",
+        "            # forward pass: outputs raw logits\n",
+        "            pred_logits = model(sample)\n",
+        "\n",
+        "            # Get prediction probability\n",
+        "            pred_prob = torch.softmax(pred_logits.squeeze(), dim=0)\n",
+        "\n",
+        "            pred_probs.append(pred_prob.cpu()) # It is better to get pred_prob off GPU for further calculations\n",
+        "\n",
+        "    return torch.stack(pred_probs) # torch.stack: turns list into tensor"
       ],
       "metadata": {
         "id": "XeWHafLzCU4S"
+      },
+      "execution_count": 144,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random"
+      ],
+      "metadata": {
+        "id": "beEztO-tI4hQ"
+      },
+      "execution_count": 145,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random.seed(42)\n",
+        "\n",
+        "test_samples = []\n",
+        "test_labels = []\n",
+        "\n",
+        "for sample, label in random.sample(list(test_data), k=9):\n",
+        "    test_samples.append(sample)\n",
+        "    test_labels.append(label)\n",
+        "\n",
+        "print(f\"Image shape of the test sample: {test_samples[0].shape}\")\n",
+        "print(f\"Test sample label: {test_labels[0]} {class_names[test_labels[0]]}\")"
+      ],
+      "metadata": {
+        "id": "Nt2qXMwlJFyc",
+        "outputId": "04a4bcb4-e193-407c-9187-f434202918c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Image shape of the test sample: torch.Size([1, 28, 28])\n",
+            "Test sample label: 5 Sandal\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Making predictions\n",
+        "\n",
+        "pred_probs = make_predictions(model = model_2,\n",
+        "                              data = test_samples)\n",
+        "\n",
+        "pred_probs[:4]"
+      ],
+      "metadata": {
+        "id": "JbqAsu8dKPMq",
+        "outputId": "bf44e604-1b3b-47a9-a924-506ddfd2c60d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 148,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1.0573e-07, 1.7158e-08, 1.2124e-07, 5.1309e-08, 2.0440e-08, 9.9980e-01,\n",
+              "         3.8499e-07, 5.9915e-06, 2.5315e-05, 1.6773e-04],\n",
+              "        [1.2224e-02, 7.9388e-01, 3.6652e-04, 1.1290e-01, 2.3855e-02, 4.6649e-05,\n",
+              "         5.6302e-02, 1.7431e-04, 1.5931e-04, 9.2392e-05],\n",
+              "        [1.1368e-05, 1.3592e-06, 2.0034e-05, 2.0106e-06, 5.7082e-06, 4.0968e-04,\n",
+              "         1.2891e-06, 8.5975e-01, 1.8084e-04, 1.3962e-01],\n",
+              "        [5.6150e-04, 1.0721e-04, 1.3125e-01, 1.9711e-03, 8.6460e-01, 1.5728e-05,\n",
+              "         1.3218e-03, 3.4890e-06, 1.6120e-04, 6.5194e-06]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 148
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QNZrh5tELC-e"
       },
       "execution_count": null,
       "outputs": []
