--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNshx0KTTqpw096KDaXA5SL"
+      "authorship_tag": "ABX9TyOC4kcyVxpENISz+7DBDImB"
     },
     "kernelspec": {
       "name": "python3",
@@ -4791,11 +4791,11 @@
         "!nvidia-smi # checks for gpu"
       ],
       "metadata": {
-        "id": "7lmqTB7wDiOU",
-        "outputId": "741179bf-9e85-4fe9-ed64-9e289cb16f7c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7lmqTB7wDiOU",
+        "outputId": "741179bf-9e85-4fe9-ed64-9e289cb16f7c"
       },
       "execution_count": 85,
       "outputs": [
@@ -4856,6 +4856,18 @@
       ],
       "metadata": {
         "id": "38NhJeuhEqlH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Q3: To prevent overfitting:\n",
+        "  - Mixing training and testing data and increasing data size through augmentation techniques like flipping, rotation, adding noise, .. etc.\n",
+        "  - Using regularization: adding penalty term to the loss function.\n",
+        "  "
+      ],
+      "metadata": {
+        "id": "icQm4oZyHh_f"
       }
     },
     {
