--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOC4kcyVxpENISz+7DBDImB"
+      "authorship_tag": "ABX9TyMS7flHESMFHqKbNBmZsmeK"
     },
     "kernelspec": {
       "name": "python3",
@@ -4862,9 +4862,9 @@
       "cell_type": "markdown",
       "source": [
         "Q3: To prevent overfitting:\n",
-        "  - Mixing training and testing data and increasing data size through augmentation techniques like flipping, rotation, adding noise, .. etc.\n",
-        "  - Using regularization: adding penalty term to the loss function.\n",
-        "  "
+        "  - Mixing training and testing data and increasing data size through augmentation techniques like flipping, rotation, adding artificial noise, .. etc to increase the diversity of the dataset.\n",
+        "  - Using regularization: adding penalty term to the loss function to discourage the model from fitting too closely.\n",
+        "  - Reducing complexity by using simpler model with less neurons or layers."
       ],
       "metadata": {
         "id": "icQm4oZyHh_f"
