--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO0wplaWEplssR1sa3cQSmL"
+      "authorship_tag": "ABX9TyOh5PJ6jko3vS3xWULG+Fsj"
     },
     "kernelspec": {
       "name": "python3",
@@ -4016,7 +4016,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7lmqTB7wDiOU",
-        "outputId": "a09fc5fe-28ee-44fd-b9ed-f98d64ae0042"
+        "outputId": "ec1a7f6c-7986-4018-fb90-3270fc7742f7"
       },
       "execution_count": 1,
       "outputs": [
@@ -4024,7 +4024,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Wed Feb 12 20:56:48 2025       \n",
+            "Sat Feb 15 19:48:43 2025       \n",
             "+-----------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
             "|-----------------------------------------+------------------------+----------------------+\n",
@@ -4033,7 +4033,7 @@
             "|                                         |                        |               MIG M. |\n",
             "|=========================================+========================+======================|\n",
             "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   37C    P8              9W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
+            "| N/A   52C    P8             10W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
             "|                                         |                        |                  N/A |\n",
             "+-----------------------------------------+------------------------+----------------------+\n",
             "                                                                                         \n",
@@ -4056,12 +4056,12 @@
       ],
       "metadata": {
         "id": "J23A9i559Nf6",
-        "outputId": "4d472d9b-bc90-4074-8976-2121277cb1a5",
+        "outputId": "6bc381ed-25bf-4c97-ab74-979b563c6f9c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -4080,14 +4080,13 @@
       "metadata": {
         "id": "ivcjmWyvsa_T"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### Q1:\n",
-        "3 areas in industry where CV is used:\n",
+        "### Q1: Three areas in industry where CV is used:\n",
         "  - Agriculture\n",
         "  - Self-driving Cars\n",
         "  - Multimodal GenAI"
@@ -4099,8 +4098,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Q2:\n",
-        "Overfitting in ML is inability to generalize to unseen data although being highly accurate in training (The model overly memorized the training data)."
+        "### Q2: Overfitting in ML:\n",
+        "It is inability to generalize to unseen data although being highly accurate in training (The model overly memorized the training data)."
       ],
       "metadata": {
         "id": "38NhJeuhEqlH"
@@ -4109,8 +4108,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Q3:\n",
-        "To prevent overfitting:\n",
+        "### Q3: To prevent overfitting:\n",
         "  - Mixing training and testing data and increasing data size through augmentation techniques like flipping, rotation, adding artificial noise, .. etc to increase the diversity of the dataset.\n",
         "  - Using regularization: adding penalty term to the loss function to discourage the model from fitting too closely.\n",
         "  - Reducing complexity by using simpler model with less neurons or layers."
@@ -4122,7 +4120,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Q5:"
+        "### Q5: loading dataset"
       ],
       "metadata": {
         "id": "HpdHOcAUNDMM"
@@ -4136,7 +4134,7 @@
       "metadata": {
         "id": "eNPwJm51saxP"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -4160,12 +4158,12 @@
       ],
       "metadata": {
         "id": "Zp4uS-x3K4cB",
-        "outputId": "11fd6e05-4098-46d6-9c83-0231756e0de6",
+        "outputId": "8a97ca14-1039-4f1f-d0ed-781e415336d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -4183,7 +4181,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9.91M/9.91M [00:10<00:00, 907kB/s] \n"
+            "100%|██████████| 9.91M/9.91M [00:00<00:00, 16.5MB/s]\n"
           ]
         },
         {
@@ -4204,7 +4202,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 28.9k/28.9k [00:00<00:00, 134kB/s]\n"
+            "100%|██████████| 28.9k/28.9k [00:00<00:00, 499kB/s]\n"
           ]
         },
         {
@@ -4225,7 +4223,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 1.65M/1.65M [00:01<00:00, 1.27MB/s]\n"
+            "100%|██████████| 1.65M/1.65M [00:00<00:00, 4.51MB/s]\n"
           ]
         },
         {
@@ -4246,7 +4244,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 4.54k/4.54k [00:00<00:00, 10.3MB/s]"
+            "100%|██████████| 4.54k/4.54k [00:00<00:00, 2.78MB/s]"
           ]
         },
         {
@@ -4273,12 +4271,12 @@
       ],
       "metadata": {
         "id": "qDOW03q-M4kA",
-        "outputId": "5ddedbb1-6c2e-40d3-fa41-5855df157033",
+        "outputId": "1f2012ac-5d40-49ab-dc2b-3bc1e45356dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4299,7 +4297,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 6
         }
       ]
     },
@@ -4310,12 +4308,12 @@
       ],
       "metadata": {
         "id": "muF_skRrB0l4",
-        "outputId": "ab9b7e79-4f3b-4b11-edf6-91e358b73962",
+        "outputId": "10daa00f-58f0-49e1-9d23-e61e9ef68286",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4334,14 +4332,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### Q6:"
+        "### Q6: Visualizations"
       ],
       "metadata": {
         "id": "iThm1O6nNG7y"
@@ -4354,12 +4352,12 @@
       ],
       "metadata": {
         "id": "3nr1piYe9sK8",
-        "outputId": "cfc506ca-ee46-4b33-daef-512ebd4e0e3b",
+        "outputId": "b6ccede2-412a-41d9-b01a-438994da1bf3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4369,7 +4367,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 8
         }
       ]
     },
@@ -4381,7 +4379,7 @@
       "metadata": {
         "id": "dJXALRO9-34m"
       },
-      "execution_count": 19,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -4392,7 +4390,7 @@
       "metadata": {
         "id": "9RKLObJ5-JBe"
       },
-      "execution_count": 15,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -4403,13 +4401,13 @@
       ],
       "metadata": {
         "id": "adQ0bDl8-Vq0",
-        "outputId": "1cbbb7e1-a179-4f0d-a18f-3579f17554a3",
+        "outputId": "ab7bb1ff-7ee5-4090-ae71-392239e6d386",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 470
         }
       },
-      "execution_count": 29,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4419,7 +4417,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 11
         },
         {
           "output_type": "display_data",
@@ -4451,13 +4449,13 @@
       ],
       "metadata": {
         "id": "4Y9DEbX-ApkA",
-        "outputId": "1061d7f0-cee2-44fe-a42e-a983cbdf8f0b",
+        "outputId": "46426798-95fc-4ca8-de03-3572b8102a61",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 364
         }
       },
-      "execution_count": 34,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4474,7 +4472,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Q7:"
+        "### Q7: Using Dataloaders"
       ],
       "metadata": {
         "id": "_qfVFnCIFP6y"
@@ -4482,9 +4480,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "mnist_train_dataloader = torch.utils.data.DataLoader(\n",
+        "    mnist_train,\n",
+        "    batch_size = 32,\n",
+        "    shuffle = True\n",
+        ")\n",
+        "\n",
+        "mnist_test_dataloader = torch.utils.data.DataLoader(\n",
+        "    mnist_test,\n",
+        "    batch_size = 32,\n",
+        "    shuffle = False\n",
+        ")"
+      ],
       "metadata": {
         "id": "3-HY4cRZFNbR"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AZzKHntDLqxr"
       },
       "execution_count": null,
       "outputs": []
